--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -778,31 +778,31 @@
 
 # create playbook via loops
 
-# - name: --- create playbook via loops ---
-#   pause:
-#     prompt: "Please enter your project name!"
-#   register: project_name
-#   tags: [create_pb]
+- name: --- create playbook via loops ---
+  pause:
+    prompt: "Please enter your project name!"
+  register: project_name
+  tags: [create_pb]
 
-- name: --- create project path ---
+- name: --- create playbook project path ---
   file:
     path: "{{ansible_root}}/provision/roles/{{project_name}}"
     state: directory
   tags: [create_pb]
 
-- name: --- create inventory path ---
+- name: --- create playbook inventory path ---
   file:
     path: "{{ansible_root}}/provision/inventory"
     state: directory
   tags: [create_pb]
 
-- name: --- create host file ---
+- name: --- create playbook host file ---
   file:
     path: "{{ansible_root}}/provision/inventory/hosts"
     state: touch
   tags: [create_pb]
 
-- name: --- create ansible 7 direcotries ---
+- name: --- create playbook ansible 7 direcotries ---
   file:
     path: "/{{ansible_root}}/provision/roles/{{project_name}}/{{item}}"
     state: directory
@@ -816,7 +816,7 @@
     - vars
   tags: [create_pb]
 
-- name: --- create `main.yml` in 5 directory ---
+- name: --- create playbook `main.yml` in 5 directory ---
   file:
     path: "/{{ansible_root}}/provision/roles/{{project_name}}/{{item}}/main.yml"
     state: touch
