--- a/sample/provision/roles/myproject/vars/main.yml
+++ b/sample/provision/roles/myproject/vars/main.yml
@@ -8,7 +8,7 @@ var0: true
 var1: "Yes"
 
 ansible_root: /tmp/ansible-playbook
-project_name: ansible_playbook_creator
+# project_name: ansible_playbook_creator
 
 users:
   - mehrdad
