--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -912,3 +912,11 @@
   retries: 3
   delay: 10
   tags: [retry_until]
+
+- name: --- template module ---
+  template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/nginx.conf
+  notify: 
+    - my_nginx # call the corresponding handler
+  tags: [1st_handler]
