Add handler more

--- a/sample/provision/myproject.yml
+++ b/sample/provision/myproject.yml
@@ -1,4 +1,14 @@
 - hosts: myservers
+  
+  vars_prompt:
+    
+    - name: username 
+      prompt: what is your username?
+      private: no
+
+    - name: password
+      prompt: enter your password
+
   roles:
     - myproject
 
