Add some condition to script file

--- a/sample/provision/myproject.yml
+++ b/sample/provision/myproject.yml
@@ -2,9 +2,9 @@
 
   gather_facts: false
 
-  vars_prompt:
-      name: "Version"
-      prompt: "Which version Do you want to install?"
+  # vars_prompt:
+  #     name: "Version"
+  #     prompt: "Which version Do you want to install?"
 
   # vars_prompt:
   #   - name: username 
