Add deployment project

--- a/sample/provision/deployment.yml
+++ b/sample/provision/deployment.yml
@@ -1,7 +1,7 @@
 - name: something about your playbook
   hosts: <<host_name>>
   roles:
-    - spara-ansible
+    - deployment
   vars:
     key1: val1
     key2: val2
