--- a/sample/provision/deployment.yml
+++ b/sample/provision/deployment.yml
@@ -1,8 +1,3 @@
-- name: something about your playbook
-  hosts: <<host_name>>
+- hosts: myservers
   roles:
-    - deployment
-  vars:
-    key1: val1
-    key2: val2
-  become: true/false
+   - deployment 
