--- a/sample/provision/roles/deploy-japp/vars/main.yml
+++ b/sample/provision/roles/deploy-japp/vars/main.yml
@@ -1,3 +1,6 @@
 tomcat_url: "https://mirrors.ircam.fr/pub/apache/tomcat/tomcat-9/v9.0.52/bin/apache-tomcat-9.0.52.tar.gz"
 tomcat_path: "/opt/apache-tomcat-9.0.52"
 tomcat_port: "80"
+
+# variable for update war
+new_war_path:
